# chrono_marco2

./: .gitignore  main.py  path_try.py  pyproject.toml
examples/: alert_test.py  crop_img.py  dxcam_test.py  eye_test.py  find_img_in_screenshot.py  keeper_test.py  key_holder_test.py  player_test.py  pytesseract_test.py  record_yellow_position.py  save_mini_map_and_title.py  tgbot_test.py  thread_test.py
examples/fp/: alpha_setting.py  hidden_street_chiefs_prairie.py  leafre_entrance_to_sky_nest.py  mothership_corridor_104.py  mothership_corridor_304.py  try.py
examples/white_knight/: alpha_setting.py  aqua_road_the_cave_of_pianus_left.py  aqua_road_the_cave_of_pianus_right.py  el_nath_sharp_cliff_ii.py  hidden_street_bone_fish_cave.py  hidden_street_cold_shark_cave.py  hidden_street_risell_spuid_cave.py  hidden_street_shark_cave.py  hidden_street_the_hidden_dragon_tomb_ii.py  leafre_battlefield_of_fire_and_darkness.py  leafre_dragon_forest_ii.py  leafre_the_burning_forest.py  mothership_corridor_104.py  mothership_corridor_304.py  try.py
src/chrono_marco2/: __init__.py
src/chrono_marco2/alert/: __init__.py
src/chrono_marco2/common/: __init__.py  action.py  alert.py  mini_map_data.py
src/chrono_marco2/keeper/: __init__.py
src/chrono_marco2/key_holder/: __init__.py
src/chrono_marco2/key_holder/ydotool/: __init__.py  key_codes.py  key_controller.py
src/chrono_marco2/my_telegram_bot/: __init__.py  my_tg_setting.py.example
src/chrono_marco2/ndarray_img/: __init__.py
src/chrono_marco2/player/: __init__.py  ear.py  eye.py  hand.py
